# Spotify-server

./: .cache  deploy.sh  internal_playlists.json  pyproject.toml  start_spotify_server.ps1  track_data.json  training_data.json
src/spotify-server/: test.py
src/spotify_server/: config.py  helpers.py  models.py  run.py  test.py  trainer.py
src/spotify_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/spotify_server/app/: __init__.py  dto.py  models.py
src/spotify_server/app/routes/: auth_routes.py  training_routes.py
src/spotify_server/app/services/: playback_service.py  song_repository.py  spotify_service.py  training_repository.py  training_service.py  user_repository.py
src/spotify_server/app/templates/: index.html
src/spotify_server/templates/: index.html  stats.html
test/: tiny_test  tiny_test.py  toggle_test.py
